--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,8 +21,8 @@ jobs:
       uses: docker/login-action@v2.2.0
       with:
         registry: registry.cn-shanghai.aliyuncs.com
-        username: 涛声依旧易经
-        password: 12345@ssdlh
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
         logout: false
 
     - name: Use Skopeo Tools Sync Image to Docker Hub
