--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,4 +27,5 @@ jobs:
 
     - name: Use Skopeo Tools Sync Image to Docker Hub
       run: |
-         skopeo copy docker://docker.io/pytorch/pytorch:1.13.0-cuda11.6-cudnn8-devel docker://registry.cn-shanghai.aliyuncs.com/cv-guard/pytorch:1.13.0-cuda11.6-cudnn8-devel
+         # skopeo copy docker://docker.io/pytorch/pytorch:1.13.0-cuda11.6-cudnn8-devel docker://registry.cn-shanghai.aliyuncs.com/cv-guard/pytorch:1.13.0-cuda11.6-cudnn8-devel
+         skopeo copy docker://docker.io/heartexlabs/label-studio docker://registry.cn-shanghai.aliyuncs.com/cv-guard/label-studio
